# BSP6

./: README.md
PlagiarismChecker-old/: .gitignore  README.md  configuration.yaml  main.py  setup.py  setup.sh
PlagiarismChecker-old/Classes/: algorithm.py  configuration.py  directory.py  file.py  results.py
PlagiarismChecker-old/Command/: write_configuration_command.py
PlagiarismChecker-old/Configuration/: configuration.toml  configuration.yaml
PlagiarismChecker-old/GUI/: comparison_gui.py  configuration_gui.py  processing_gui.py  ranking_gui.py  results_gui.py  token_diff.py  write_configuration_gui.py
PlagiarismChecker-old/GUI/Frames/: comparison_frames.py  configuration_frames.py  processing_frames.py  ranking_frames.py  result_frames.py
plagiarism-detection/: .gitignore  LICENSE  README.md  pyproject.toml
plagiarism-detection/plagiarism_detection/: algorithms.py  config.py  directory.py  eval.py  file.py  main.py  pre_processing.py  test.py
test_files/Example-Input-copy/S1/S1/exercise4/: countries.json  pom.xml
test_files/Example-Input-copy/S1/S1/exercise4/src/main/resources/: application.properties
test_files/Example-Input-copy/S10/S10/covid/: pom.xml
test_files/Example-Input-copy/S10/S10/covid/Archiv/: pom.xml
test_files/Example-Input-copy/S10/S10/covid/Archiv/__MACOSX/: ._mvnw.cmd
test_files/Example-Input-copy/S11/S11/: pom.xml
test_files/Example-Input-copy/S11/S11/src/main/resources/: application.properties
test_files/Example-Input-copy/S2/S2/: pom.xml
test_files/Example-Input-copy/S2/S2/src/main/resources/: application.properties
test_files/Example-Input-copy/S3/S3/restful_API_0201558001/: pom.xml
test_files/Example-Input-copy/S3/S3/restful_API_0201558001/src/main/resources/: banner.txt
test_files/Example-Input-copy/S4/S4/SpringBoot-REST-Java/: pom.xml
test_files/Example-Input-copy/S4/S4/SpringBoot-REST-Java/src/main/resources/: application.properties
test_files/Example-Input-copy/S5/S5/HW4/demo/: pom.xml
test_files/Example-Input-copy/S5/S5/HW4/demo/src/main/resources/: application.properties
test_files/Example-Input-copy/S6/S6/: pom.xml
test_files/Example-Input-copy/S6/S6/src/main/resources/: application.properties
test_files/Example-Input-copy/S7/S7/Exercise4/: .gitignore  README.txt  build.gradle
test_files/Example-Input-copy/S7/S7/Exercise4/src/main/resources/: application.properties
test_files/Example-Input-copy/S8/S8/Exercise4-019113995F/: README.txt
test_files/Example-Input-copy/S8/S8/Exercise4-019113995F/RESTfullWS/: pom.xml
test_files/Example-Input-copy/S8/S8/Exercise4-019113995F/RESTfullWS/src/main/resources/: application.properties
test_files/Example-Input-copy/S9/S9/javaHw4/ex4/: pom.xml
(+38 files in other folders)
